--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,30 @@
 </head>
 
 <body>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar bg">
+            <a class="navbar-brand" href="#">i-pati</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#"> ¿Que es una API? <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Fases</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link " href="#" tabindex="-1" aria-disabled="true">Economia Social</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -40,7 +64,25 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
 </body>
+
+<footer>
+    <div class="card text-center">
+        <div class="card-header">
+            REST API
+        </div>
+        <div class="card-body">
+            <h5 class="card-title">Cooperativa para el desarrollo Digital del Artesano Mexicano</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn__unete">Unete</a>
+        </div>
+        <div class="card-footer text-muted">
+            - Base de Datos Publica de Mexico -
+        </div>
+    </div>
+
+</footer>
 
 
 
