--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar bg">
+        <nav class="navbar navbar-expand-lg navbar__header bg">
             <a class="navbar-brand" href="#">i-pati</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -74,7 +74,7 @@
         </div>
         <div class="card-body">
             <h5 class="card-title">Cooperativa para el desarrollo Digital del Artesano Mexicano</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text">manueldevmx@gmail.com</p>
             <a href="#" class="btn btn__unete">Unete</a>
         </div>
         <div class="card-footer text-muted">
